@@ -52,11 +52,12 @@ gHgenb <- function(par, fn, gr = NULL, hess = NULL, bdmsk = NULL,
     #
     #################################################################
     require(numDeriv)
-    ctrl <- list(asymtol = 1e-07, ktrace = 0, stoponerror = FALSE)
+    ctrl <- list(asymtol = 1e-07, ktrace = 0, dowarn=TRUE, stoponerror = FALSE)
     namc <- names(control)
     if (!all(namc %in% names(ctrl))) 
         stop("unknown names in control: ", namc[!(namc %in% names(ctrl))])
     ctrl[namc] <- control
+    if (ctrl$ktrace>0) ctrl$dowarn<-TRUE # force TRUE for trace
     # For bounds constraints, we need to 'project' the gradient and Hessian
     # For masks there is no possibility of movement in parameter.
     bmset <- sort(unique(c(which(par <= lower), which(par >= upper), c(which(bdmsk == 
@@ -126,7 +127,7 @@ gHgenb <- function(par, fn, gr = NULL, hess = NULL, bdmsk = NULL,
                     asym, sep = "")
                   if (ctrl$ktrace > 0) 
                     cat(asw, "\n")
-                  warning(asw)
+                  if (ctrl$dowarn) warning(asw)
                   if (asym > ctrl$asymtol) {
                     if (ctrl$stoponerror) 
                       stop("Hessian too asymmetric")
@@ -134,7 +135,7 @@ gHgenb <- function(par, fn, gr = NULL, hess = NULL, bdmsk = NULL,
                   else hessOK <- TRUE
                   if (ctrl$ktrace > 0) 
                     cat("Force Hessian symmetric\n")
-                  else warning("Hessian forced symmetric", call. = FALSE)
+                  else if (ctrl$dowarn) warning("Hessian forced symmetric", call. = FALSE)
                   Hn <- 0.5 * (t(Hn) + Hn)
                 }  # end if ! isSymmetric
         }  # numerical hessian at 'solution'
@@ -158,7 +159,7 @@ gHgenb <- function(par, fn, gr = NULL, hess = NULL, bdmsk = NULL,
                   asym, sep = "")
                 if (ctrl$ktrace > 0) 
                   cat(asw, "\n")
-                else warning(asw)
+                else if (ctrl$dowarn) warning(asw)
                 if (asym > ctrl$asymtol) {
                   if (ctrl$stoponerror) 
                     stop("Hessian too asymmetric")
@@ -166,7 +167,7 @@ gHgenb <- function(par, fn, gr = NULL, hess = NULL, bdmsk = NULL,
                 else hessOK <- TRUE
                 if (ctrl$ktrace > 0) 
                   cat("Force Hessian symmetric\n")
-                else warning("Hessian forced symmetric", call. = FALSE)
+                else if (ctrl$dowarn) warning("Hessian forced symmetric", call. = FALSE)
                 Hn <- 0.5 * (t(Hn) + Hn)
             }  # end if ! isSymmetric
     }  # end hessian computation
